--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -1,49 +1,11 @@
-# src_files
-#
-# Return an array of filepaths relative to src_dir to include before jasmine specs.
-# Default: []
-#
-# EXAMPLE:
-#
-# src_files:
-#   - lib/source1.js
-#   - lib/source2.js
-#   - dist/**/*.js
-#
 src_files:
-  - public/javascripts/prototype.js
-  - public/javascripts/effects.js
-  - public/javascripts/controls.js
-  - public/javascripts/dragdrop.js
-  - public/javascripts/application.js
-  - public/javascripts/**/*.js
+  - **/*.js
 
-# stylesheets
-#
-# Return an array of stylesheet filepaths relative to src_dir to include before jasmine specs.
-# Default: []
-#
-# EXAMPLE:
-#
-# stylesheets:
-#   - css/style.css
-#   - stylesheets/*.css
-#
 stylesheets:
   - stylesheets/**/*.css
 
-# helpers
-#
-# Return an array of filepaths relative to spec_dir to include before jasmine specs.
-# Default: ["helpers/**/*.js"]
-#
-# EXAMPLE:
-#
-# helpers:
-#   - helpers/**/*.js
-#
-helpers:
-  - helpers/**/*.js
+src_dir: public/javascripts/compiled
+spec_dir: spec/javascripts
 
 # spec_files
 #
@@ -56,26 +18,18 @@ helpers:
 #   - **/*[sS]pec.js
 #
 spec_files:
-  - '**/*[sS]pec.js'
+  - **/*spec.js
 
-# src_dir
+# helpers
 #
-# Source directory path. Your src_files must be returned relative to this path. Will use root if left blank.
-# Default: project root
+# Return an array of filepaths relative to spec_dir 
+# to include before jasmine specs.
+# Default: ["helpers/**/*.js"]
 #
 # EXAMPLE:
 #
-# src_dir: public
+# helpers:
+#   - helpers/**/*.js
 #
-src_dir:
-
-# spec_dir
-#
-# Spec directory path. Your spec_files must be returned relative to this path.
-# Default: spec/javascripts
-#
-# EXAMPLE:
-#
-# spec_dir: spec/javascripts
-#
-spec_dir: spec/javascripts
+helpers:
+  - helpers/**/*.js
