added photo icons to mobile3

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ db/test.*
 db/development.*
 db/development.sqlite3
 db/*.sqlite3
+public/images/icon*
+public/images/icons/*
 doc
 doc/*
 coverage
