--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,33 @@
-# SQLite version 3.x
-#   gem install sqlite3
+# for development
+# development:
+#   adapter: sqlite3
+#   database: db/development.sqlite3
+#   pool: 5
+#   timeout: 5000
+
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: bnet_development
   pool: 5
-  timeout: 5000
+  template: template0
+  username: bnet
+  password: <%= POSTGRES_PASSWORD %>
 
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: bnet_test
   pool: 5
-  timeout: 5000
+  username: bnet
+  template: template0
+  password: <%= POSTGRES_PASSWORD %>
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: bnet_production
   pool: 5
-  timeout: 15000
+  username: bnet
+  template: template0
+  password: <%= POSTGRES_PASSWORD %>
