--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
  pool: 5
  template: template0
  username: bnet
- password: simple
+ password: <%= POSTGRES_PASS %>
 
 test:
   adapter: postgresql
@@ -21,7 +21,16 @@ test:
   pool: 5
   username: bnet
   template: template0
-  password: simple
+  password: <%= POSTGRES_PASS %>
+
+staging:
+  adapter: postgresql
+  encoding: unicode
+  database: bnet_staging
+  pool: 5
+  username: bnet
+  template: template0
+  password: <%= POSTGRES_PASS %>
 
 production:
   adapter: postgresql
@@ -30,4 +39,4 @@ production:
   pool: 5
   username: bnet
   template: template0
-  password: simple
+  password: <%= POSTGRES_PASS %>
