--- a/.tesh_env.yaml
+++ b/.tesh_env.yaml
@@ -8,7 +8,8 @@
 - app/**/*.erb
 - lib/**/*.rb
 :app_exclude_pattern: []
+:test_pattern: 
 :test_files: 
 :test_line: 
-:command_args: -t ~capybara
-:command: bundle exec rspec -O spec/spec.opts
+:command_args: 
+:command: zeus rspec -O spec/spec.opts
