enabled default rsvp for members page

--- a/.tesh_env.yaml
+++ b/.tesh_env.yaml
@@ -8,8 +8,8 @@
 - app/**/*.erb
 - lib/**/*.rb
 :app_exclude_pattern: []
-:test_pattern: modperio modmess
-:test_files: spec/models/period_spec.rb spec/models/message_spec.rb
-:test_line: 
+:test_pattern: page_gen
+:test_files: spec/services/page_gen_svc_spec.rb
+:test_line: ':5'
 :command_args: 
 :command: zeus rspec -O spec/spec.opts
