--- a/.tesh_env.yaml
+++ b/.tesh_env.yaml
@@ -8,8 +8,8 @@
 - app/**/*.erb
 - lib/**/*.rb
 :app_exclude_pattern: []
-:test_pattern: page_gen
-:test_files: spec/services/page_gen_svc_spec.rb
-:test_line: ':5'
+:test_pattern: 
+:test_files: 
+:test_line: 
 :command_args: 
 :command: zeus rspec -O spec/spec.opts
