--- a/.tesh_env.yaml
+++ b/.tesh_env.yaml
@@ -8,8 +8,8 @@
 - app/**/*.erb
 - lib/**/*.rb
 :app_exclude_pattern: []
-:test_pattern: inbound
-:test_files: spec/services/inbound_mail_svc_spec.rb spec/models/inbound_mail_spec.rb
+:test_pattern: 
+:test_files: 
 :test_line: 
 :command_args: 
 :command: spring rspec -O spec/spec.opts
