--- a/.tesh_env.yaml
+++ b/.tesh_env.yaml
@@ -8,11 +8,8 @@
 - app/**/*.erb
 - lib/**/*.rb
 :app_exclude_pattern: []
-:test_pattern: mod
-:test_files: spec/models/phone_spec.rb spec/models/period_spec.rb spec/models/participant_spec.rb
-  spec/models/message_spec.rb spec/models/member_spec.rb spec/models/journal_spec.rb
-  spec/models/inbound_mail_spec.rb spec/models/event_spec.rb spec/models/distribution_spec.rb
-  spec/models/avail_ops_spec.rb spec/models/address_spec.rb
+:test_pattern: parti
+:test_files: spec/models/participant_spec.rb spec/features/data_files_spec.rb
 :test_line: 
 :command_args: 
 :command: zeus rspec -O spec/spec.opts
