--- a/.tesh_env.yaml
+++ b/.tesh_env.yaml
@@ -8,8 +8,8 @@
 - app/**/*.erb
 - lib/**/*.rb
 :app_exclude_pattern: []
-:test_pattern: parti
-:test_files: spec/models/participant_spec.rb spec/features/data_files_spec.rb
+:test_pattern: 
+:test_files: 
 :test_line: 
 :command_args: 
 :command: zeus rspec -O spec/spec.opts
