updates roles table

--- a/.tesh_env.yaml
+++ b/.tesh_env.yaml
@@ -8,8 +8,8 @@
 - app/**/*.erb
 - lib/**/*.rb
 :app_exclude_pattern: []
-:test_pattern: mod/role_spec.rb
-:test_files: spec/models/role_spec.rb
+:test_pattern: 
+:test_files: 
 :test_line: 
 :command_args: 
 :command: zeus rspec -O spec/spec.opts
